--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/*
 .App {
  padding: 20px;
   display: flex;
@@ -22,4 +23,4 @@
 .isDone {
     opacity: 0.5;
     text-decoration: line-through;
-}
+}*/
